--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -17,7 +17,7 @@
 
     <li>
       <span class="header__emoji" aria-hidden="true">✉️</span>
-      <a [routerLink]="['/contact']">Send transmission</a>
+      <a [routerLink]="['/contact']">Contact</a>
     </li>
 
     <li class="hidden-sm">
