--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -64,6 +64,23 @@
     li {
       display: inline-block;
       margin-right: $space-large;
+      position: relative;
+
+      &:after {
+        content: '';
+        display: block;
+        height: 1px;
+        width: 100%;
+        background-color: $color-white;
+        transform: translateX(100%);
+        opacity: 0;
+        transition: transform .3s ease, opacity .3s ease;
+      }
+
+      &:hover:after {
+        opacity: 1;
+        transform: translateY(0);
+      }
 
       @include md {
         margin-right: 0;
