--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -31,8 +31,8 @@
   </div>
 
   <div data-aos="fade-in" data-aos-delay="200" data-aos-duration="3000" *ngIf="home">
-    <h1>Discover how brands <div></div>can move people</h1>
-    <p class="hero__tagline">Let’s create an awesome experience</p>
+    <h1>Branding for a better future</h1>
+    <p class="hero__tagline">Because revolutionary technology <span style="display: block">needs revolutionary design&trade;</span></p>
     <div class="hero__button" data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
       <a [routerLink]="['/work']" class="btn btn--lg">See the work</a>
     </div>
