--- a/src/assets/sass/objects/_btn.scss
+++ b/src/assets/sass/objects/_btn.scss
@@ -7,20 +7,20 @@
   padding: $space-medium;
   appearance: none;
   text-decoration: none !important;
-
+  
   @include md {
     width: auto;
   }
-
+  
   &--outline {
     background-color: transparent;
     border: 1px solid;
   }
-
+  
   &--primary-outline {
-    background-color: transparent;
+    @extend .btn--outline;
     backdrop-filter: blur(3px);
-    border: 1px solid $color-white;
+    border-color: $color-white;
     color: $color-white;
 
     &:hover,
@@ -56,6 +56,19 @@
       background-color: $color-black !important;
       color: $color-white !important;
       outline: none !important;
+    }
+  }
+
+  &--black {
+    background-color: $color-black;
+    color: $color-white;
+
+    &:hover,
+    &:focus {
+      background-color: transparent;
+      color: $color-black;
+      border-color: $color-black;
+      outline: none;
     }
   }
 }
