--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,7 +16,7 @@
       </header>
 
       <p class="home__lead">
-        We take your big idea, refine it through business strategy, 
+        We take your big idea, refine it through business strategy and 
         execute it through bold design. We then build it into an unforgettable experience
         helping your biotech product reach those who need it.
       </p>
