--- a/src/app/pages/privacy-policy/privacy-policy.component.html
+++ b/src/app/pages/privacy-policy/privacy-policy.component.html
@@ -96,6 +96,14 @@
       <p>
         For more details on Google Analytics please visit <a href="http://www.google.com/analytics/">their website</a>.
       </p>
+      
+      <p>
+        We use Hotjar in order to better understand our users’ needs and to optimize this service and experience. Hotjar is a technology service that helps us better understand our users experience (e.g. how much time they spend on which pages, which links they choose to click, what users do and don’t like, etc.) and this enables us to build and maintain our service with user feedback. Hotjar uses cookies and other technologies to collect data on our users’ behavior and their devices (in particular device's IP address (captured and stored only in anonymized form), device screen size, device type (unique device identifiers), browser information, geographic location (country only), preferred language used to display our website). Hotjar stores this information in a pseudonymized user profile. Neither Hotjar nor we will ever use this information to identify individual users or to match it with further data on an individual user. For further details, please see Hotjar’s privacy policy by clicking on <a href="https://www.hotjar.com/legal/policies/privacy" target="_blank" noreferrer nofollow>this link</a>.
+      </p>
+
+      <p>
+        You can opt-out to the creation of a user profile, Hotjar’s storing of data about your usage of our site and Hotjar’s use of tracking cookies on other websites by following this <a href="https://www.hotjar.com/legal/compliance/opt-out" target="_blank">opt-out</a> link. 
+      <p>
     </section>
 
     <section>
