--- a/src/app/pages/work/work.component.scss
+++ b/src/app/pages/work/work.component.scss
@@ -66,22 +66,24 @@
   }
 
   &__tag {
-    margin: 10px 2.5px;
+    margin: 20px auto;
+    display: inline-block;
+    padding: 5px;
+    color: $color-white;
+    border-radius: 5px;
+    font-size: $small-font;
+    border: 1px solid $color-white;
+    transition: background-color .3s ease;
+    @include font-size($small-font);
 
-    a {
-      padding: 5px;
-      //background-color: $color-oldBrick;
+    @include hover-focus {
+      background-color: $color-white;
+      color: $color-black;
+    }
+    
+    &:active {
+      background-color: transparent;
       color: $color-white;
-      border-radius: 5px;
-      font-size: $small-font;
-      border: 1px solid $color-white;
-      transition: background-color .3s ease;
-      @include font-size($small-font);
-
-      @include hover-focus {
-        background-color: $color-white;
-        color: $color-black;
-      }
     }
   }
 }
