--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="home">
   <div class="container-fluid">
-    <h1 class="sr-only">Jupiter and the Giraffe | Brand Strategy & Design</h1>
+    <h1 class="sr-only">Jupiter and the Giraffe | Brand Strategy & Design studio for clinical and commercial biotech products</h1>
 
     <p class="home__tagline text-center" data-aos="fade-in">
       Jupiter and the Giraffe are a
@@ -18,7 +18,7 @@
       <p class="home__lead">
         We take your big idea, refine it through business strategy and 
         execute it through bold design. We then build it into an unforgettable experience
-        helping your biotech product reach those who need it.
+        helping your biotech product tell its story effectively to the world.
       </p>
 
       <div class="row" (appDeferLoad)="showMyElement=true">
@@ -54,8 +54,8 @@
         </header>  
       
         <p class="home__lead">
-          We specifically design and create for the biotech industry because we know how it works.
-          <span style="display: block">Branding builds trust and assurance with your product beyond words.</span>  
+          We specifically design and create for the biotech industry because we know how it works,
+          <span style="display: block">from pre clinical phase through to commercialisation</span>  
         </p>
     
         <div class="row">
