--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -54,7 +54,7 @@
         </header>  
       
         <p class="home__lead">
-          We specifically design and create for the biotech industry because we know how it works,
+          We specifically design and create for the biotech industry because we know how it works
           <span style="display: block">from pre clinical phase through to commercialisation</span>  
         </p>
     
