--- a/src/assets/sass/settings/_colours.scss
+++ b/src/assets/sass/settings/_colours.scss
@@ -1,7 +1,7 @@
 // http://chir.ag/projects/name-that-color/
 
 $color-black: #333333;
-$color-white: #e9e9e9;
+$color-white: #f7f7f7;
 $color-vulcan: #0a0b13;
 $color-oldBrick: #942223;
 $color-malibu: #93ccf8;
