--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -55,7 +55,7 @@
       
         <p class="home__lead">
           We specifically design and create for the biotech industry because we know how it works
-          <span style="display: block">from pre clinical phase through to commercialisation</span>  
+          <span style="display: block">from pre clinical phase through to commercialisation.</span>  
         </p>
     
         <div class="row">
