--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -25,6 +25,11 @@
         </div>
       </div>
 
+      <p class="footer__number">
+        <span class="hidden-sm">+44 20 3290 9902</span>
+        <a href="tel:442032909902" class="hidden-sm-up">+44 20 3290 9902</a>
+      </p>
+
       <ul class="footer__social list-unstyled list-inline">
         <li>
           <a href="https://www.linkedin.com/company/jupiter-and-the-giraffe/" class="link-plain footer__social-link" title="Jupiter and the Giraffe Linkedin profile">
