--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -25,9 +25,15 @@
       <a [routerLink]="['/contact']">Contact</a>
     </li>
 
-    <li class="hidden-sm">
+    <li class="hidden-md-down">
       <span class="header__emoji" aria-hidden="true">📕️</span>
       <a href="https://blog.jupiterandthegiraffe.com">Discover</a>
+    </li>
+    
+    <li class="no-hover">
+      <span class="header__emoji" aria-hidden="true">📲</span>
+      <span class="hidden-sm">+44 20 3290 9902</span>
+      <a href="tel:442032909902" class="hidden-sm-up">+44 20 3290 9902</a>
     </li>
   </ul>
 </header>
