--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -18,6 +18,8 @@
             Good to see you. We were just talking about you! Drop us a line and let us know why you're here.
           </p>
 
+          <p><strong>Call</strong>: +44 20 3290 9902</p>
+
           <form [formGroup]="rForm" (ngSubmit)="sendForm(rForm.value)" novalidate>
             <label>
               Name:
