--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,12 @@
 <section class="home">
   <div class="container-fluid">
-    <h1 class="sr-only">Jupiter and the Giraffe | Brand Strategy & Design studio for clinical and commercial biotech products</h1>
+    <h1 class="sr-only">Jupiter and the Giraffe | Brand Strategy & Design studio for digital products</h1>
 
     <p class="home__tagline text-center" data-aos="fade-in">
       Jupiter and the Giraffe are a
-      <span style="display: block">nomadic brand strategy and design studio</span>
-      that help elevate biotech products
+      <span style="display: block">nomadic <strong>brand strategy and design</strong> studio</span>
+      that help life-changing <strong>digital products</strong>
+      <strong style="display: block">stand out in the market</strong>
     </p>
 
     <section class="section text-center home__services">
@@ -18,7 +19,7 @@
       <p class="home__lead">
         We take your big idea, refine it through business strategy and 
         execute it through bold design. We then build it into an unforgettable experience
-        helping your biotech product tell its story effectively to the world.
+        helping your product tell its story effectively to the world.
       </p>
 
       <div class="row" (appDeferLoad)="showMyElement=true">
@@ -54,8 +55,8 @@
         </header>  
       
         <p class="home__lead">
-          We specifically design and create for the biotech industry because we know how it works
-          <span style="display: block">from pre clinical phase through to commercialisation.</span>  
+          We specifically design and create for the digital technology because we know how it works
+          <span style="display: block">from startup through to commercialisation.</span>  
         </p>
     
         <div class="row">
@@ -208,9 +209,10 @@
       </p>
 
       <div class="text-center">
-        <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--dark"><span aria-hidden="true"
-                                                                                        class="vertical-align">🚀 </span>Let's
-          go!</a>
+        <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--dark">
+          <span aria-hidden="true" class="vertical-align">🚀 </span>
+          Let's go!
+        </a>
       </div>
     </section>
 
