--- a/src/assets/sass/objects/objects.scss
+++ b/src/assets/sass/objects/objects.scss
@@ -3,6 +3,7 @@
 @import "container";
 @import "headings";
 @import "home";
+@import "img";
 @import "link";
 @import "lists";
 @import "typography";
