changed global fonts

--- a/src/assets/sass/settings/_fonts.scss
+++ b/src/assets/sass/settings/_fonts.scss
@@ -1,4 +1,4 @@
-$body-font: 'Prompt', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+$body-font: 'Open Sans', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 $title-font: 'KG-SummerStorm', Arial, sans-serif;
 $base-font: 16;
 $base-font-desk: 18;
