--- a/src/app/global/get-in-touch/get-in-touch.component.html
+++ b/src/app/global/get-in-touch/get-in-touch.component.html
@@ -8,7 +8,7 @@
     </p>
 
     <div class="text-center margin-bottom--lg">
-      <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--dark"><span aria-hidden="true">🚀 </span>Let's
+      <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--black"><span aria-hidden="true">🚀 </span>Let's
         go!</a>
     </div>
   </section>
