--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -10,7 +10,7 @@
       <div class="hero__text text-center" data-aos="fade-up" data-aos-delay="400">
         A
         <span *ngIf="router.url === '/'" class="hero__lead-letter">branding agency</span>
-        <a *ngIf="router.url !== '/'" class="hero__lead-letter link-plain" href="https://jupiterandthegiraffe.com">branding agency</a>
+        <a *ngIf="router.url !== '/'" class="hero__lead-letter link-plain" href="https://jupiterandthegiraffe.com">branding studio</a>
         out of this world.
       </div>
     </div>
