--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -209,7 +209,7 @@
       </p>
 
       <div class="text-center">
-        <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--dark">
+        <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--black">
           <span aria-hidden="true" class="vertical-align">🚀 </span>
           Let's go!
         </a>
