--- a/src/assets/sass/objects/_btn.scss
+++ b/src/assets/sass/objects/_btn.scss
@@ -62,6 +62,7 @@
   &--black {
     background-color: $color-black;
     color: $color-white;
+    border-color: $color-black;
 
     &:hover,
     &:focus {
