--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -62,7 +62,7 @@
   &__menu-button {
     position: fixed;
     right: 15px;
-    top: 10px;
+    top: 0;
     z-index: 12;
     background: none;
     border: none;
