--- a/src/assets/sass/objects/_white-bg.scss
+++ b/src/assets/sass/objects/_white-bg.scss
@@ -4,8 +4,8 @@
   color: $color-black;
   padding-bottom: $space-large;
 
-  .paratext {
-    margin: 100px 80px 100px 80px;
+  .para-text {
+    margin: 100px 80px;
   }
 
   .image-text {
@@ -15,14 +15,13 @@
   }
 
   .quote {
-    margin: 100px 240px 100px 240px;    
+    margin: 100px 240px;    
     text-align: center;
   }
 
   .dash {
     font-family: $title-font;
-    margin-left: 70px;
-    margin-right: 70px;
+    margin: 0 70px 0 70px;
   }
 
   a {
