--- a/src/assets/sass/objects/_white-bg.scss
+++ b/src/assets/sass/objects/_white-bg.scss
@@ -25,8 +25,9 @@
   }
 
   a {
-  a:not(.btn) {
-    color: $color-oldBrick;
+    a:not(.btn) {
+      color: $color-oldBrick;
+    }
   }
 
   &--with-image {
