Feature/case study font update (#78)
* changed global fonts

* added new mockup image

* made additions and changes for the case study page

* deleted some font-weights and tidied code

* Update _white-bg.scss

--- a/src/assets/sass/objects/_white-bg.scss
+++ b/src/assets/sass/objects/_white-bg.scss
@@ -4,8 +4,30 @@
   color: $color-black;
   padding-bottom: $space-large;
 
-  a:not(.btn) {
-    color: $color-oldBrick;
+  .para-text {
+    margin: 100px 80px;
+  }
+
+  .image-text {
+    text-align: center;
+    font-style: italic;
+    padding: 5px;
+  }
+
+  .quote {
+    margin: 100px 240px;    
+    text-align: center;
+  }
+
+  .dash {
+    font-family: $title-font;
+    margin: 0 70px 0 70px;
+  }
+
+  a {
+    a:not(.btn) {
+      color: $color-oldBrick;
+    }
   }
 
   &--with-image {
