--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,42 @@
+@import "../assets/sass/settings/settings";
+
 app-root {
   overflow: hidden;
 }
+
+.loading {
+  position: fixed;
+  background-color: rgba($color-black, .9);
+  flex-direction: column;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 15;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transform: translateX(100%);
+  transition: opacity .3s ease, transform .1s linear .3s;
+  
+  &--is-loading {
+    transition: opacity .3s ease;
+    transform: translateX(0);
+    opacity: 1;
+  }
+  
+  &__rocket {
+    margin-left: -105px;
+    animation: rotate 1s infinite;
+    transform-origin: 60px 40px;
+    transform: translateX(-100px);
+    display: block;
+  }
+
+  @keyframes rotate {
+    0%   { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+}
+
