--- a/src/app/pages/case-study/case-study.component.scss
+++ b/src/app/pages/case-study/case-study.component.scss
@@ -78,6 +78,17 @@
     color: $color-white;
     height: 400px;
     justify-content: flex-end;
+    position: relative;
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba($color-black, .3);
+    }
 
     @include md {
       height: 100vh;
@@ -106,6 +117,7 @@
 
   &__heading {
     margin-top: 0;
+    z-index: 1;
   }
 
   .get-in-touch {
