Center align work images

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -148,6 +148,7 @@
     background-size: cover;
     position: relative;
     display: block;
+    background-position: center;
     color: $color-white;
     margin-bottom: 20px;
 
