hid case study h1

--- a/src/app/pages/work/work.component.html
+++ b/src/app/pages/work/work.component.html
@@ -1,4 +1,4 @@
-<div class="work white-bg">
+<div class="work white-bg sr-only">
   <div class="container-fluid">
     <header>
       <h2>Projects</h2>
